name:                datastreamer 
version:             0.0.1
synopsis:            sample app 
homepage:            https://github.com/junsumida/datastreamer
license:             MIT
author:              Jun Sumida 
maintainer:          sekitoh.rh@gmail.com 
category:            Web
build-type:          Simple
cabal-version:       >=1.8

executable datastreamer
  main-is:             Main.hs
  -- other-modules:       
  if flag(devel)
    Buildable: False
  if flag(production)
    ghc-options:   -Wall -threaded -O2 -static
  else
    ghc-options:   -Wall -threaded -O0
  build-depends:       base >=4.6.*
                     , wai
                     , warp
                     , http-types
                     , resourcet
                     , conduit-extra
                     , containers
                     , aeson
                     , scotty == 0.9.*
                     , text
                     , bytestring
                     , blaze-html
                     , persistent == 2.*
                     , persistent-template ==2.*
                     , persistent-sqlite ==2.*
                     , persistent-postgresql ==2.1.*
                     , monad-logger
                     , heroku
                     , transformers
                     , wai-middleware-static
                     , wai-extra
                     , time
